compiler/tests/fixtures/compile_errors/return_addition_with_mixed_types.fe
contract Foo:
    pub def bar(x: u256, y: u128) -> u128:
        return x + y
